--- a/yascon-rest/static/speakers.html
+++ b/yascon-rest/static/speakers.html
@@ -53,6 +53,10 @@
         <div x-data="speakers()">
             <h2>Speakers</h2>
             <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Bio</th>
+                </tr>
                 <template x-for="speaker in speakers" :key="speaker.id">
                     <tr>
                         <td><input type="text" x-model="speaker.name" @blur="updateSpeaker(speaker)"></td>
