Take a db name as arg and css

--- a/yascon-rest/static/index.html
+++ b/yascon-rest/static/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="./header.css"/>
     </head>
-    <body>
+    <body class="flex-top">
     <table width="100%">
         <tr>
             <td><a href="./speakers.html" target="iframe">Speakers</a></td>
@@ -12,6 +13,6 @@
             <td><a href="./attendees.html" target="iframe">Attendees</a></td>
         </tr>
     </table>
-    <iframe name="iframe" style="width: 100%; height: 1000px;"></iframe>
+    <iframe name="iframe" class="iframe-flex" style="width: 100%; height: 80%;"></iframe>
     </body>
 </html>
