--- a/yascon-rest/static/presentations.html
+++ b/yascon-rest/static/presentations.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="./content.css"/>
         <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
         <script>
             function presentations() {
@@ -66,11 +67,11 @@
     <body>
         <div x-data="presentations()">
             <h2>Presentations</h2>
-            <table>
+            <table width="80%">
                 <tr>
-                    <th>Name</th>
-                    <th>Description</th>
-                    <th>Speaker Name</th>
+                    <th width="30%">Name</th>
+                    <th width="55%">Description</th>
+                    <th width="15%">Speaker Name</th>
                 </tr>
                 <template x-for="presentation in presentations" :key="presentation.id">
                     <tr>
