--- a/yascon-rest/static/attendee.html
+++ b/yascon-rest/static/attendee.html
@@ -1,102 +1,104 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="./content.css"/>
-        <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
-        <script>
-            function attendee() {
+
+<head>
+    <link rel="stylesheet" href="./content.css" />
+    <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
+</head>
+
+<body>
+    <div id="app">
+        <h2>{{attendee.name}}</h2>
+        <table width="80%">
+            <tr>
+                <th width="40%">Presentation</th>
+                <th width="20%">Venue</th>
+                <th width="15%">Start Date/Time</th>
+                <th width="3%">Duration Minutes</th>
+            </tr>
+            <tr v-for="attendeeSession in attendeeSessions" :key="attendeeSession.id">
+                <td><input type="text" v-model="attendeeSession.presentation.name" readonly></td>
+                <td><input type="text" v-model="attendeeSession.venue.name" readonly></td>
+                <td><input type="text" :value="fromEpochMinute(attendeeSession.start_time_min)" readonly></td>
+                <td><input type="text" v-model="attendeeSession.duration_mins" readonly></td>
+                <td><button @click="deleteAttendeeSession(attendeeSession.id)">Delete</button></td>
+                <td><button @click="showSessionAttendees(attendeeSession.id)">Session</button></td>
+            </tr>
+            <tr>
+                <td colspan="4">
+                    <select v-model="newAttendeeSession.id">
+                        <option value="0"></option>
+                        <option v-for="session in sessions" :key="session.id" :value="session.id">
+                          {{session.presentation.name + ' - ' + session.venue.name + ' - ' + fromEpochMinute(session.start_time_min) + ' - ' + session.duration_mins}}
+                        </option>
+                    </select>
+                </td>
+                <td><button @click="createAttendeeSession()">Add</button></td>
+            </tr>
+        </table>
+    </div>
+    <script>
+        const { createApp } = Vue;
+
+        createApp({
+            data() {
                 return {
-                    attendee: { },
+                    attendee: {},
                     sessions: [],
                     attendeeSessions: [],
-                    newAttendeeSession: { },
-
-                    async fetchData() {
-                        const attendeeData = await fetch(`/attendees/${this.attendee.id}`);                       
-                        const attendeeSessionsData = await fetch(`/attendees/${this.attendee.id}/sessions`);
-                        const sessionsData = await fetch('/sessions?venue=name&presentation=name');
-                        
-                        const allSessions = await sessionsData.json();
-
-                        this.attendeeSessions = await attendeeSessionsData.json();
-
-                        const sessionSet = new Set(this.attendeeSessions.map(it => it.id));
-
-                        this.sessions = allSessions.filter(session => !sessionSet.has(session.id));
-
-                        this.attendee = await attendeeData.json();
-                    },
-
-                    async createAttendeeSession() {
-                        if (this.newAttendeeSession.id) {
-                            const res = await fetch(`/attendees/${this.attendee.id}/sessions/${this.newAttendeeSession.id}`, {
-                                method: 'PUT',
-                            });
-
-                            document.location.reload()
-                        }
-                    },
-
-                    async deleteAttendeeSession(id) {
-                        await fetch(`/attendees/${this.attendee.id}/sessions/${id}`, { method: 'DELETE' });
-                        document.location.reload()
-                    },
-
-                    fromEpochMinute(epoch) {
-                        const date = new Date()
-                        date.setTime((epoch + date.getTimezoneOffset()) * 60000) // JS Date wants ms
-                        const year = date.getFullYear()
-                        const month = String(date.getMonth() + 1).padStart(2, "0")
-                        const day = String(date.getDate()).padStart(2, "0")
-                        const hour = String(date.getHours()).padStart(2, "0")
-                        const minute = String(date.getMinutes()).padStart(2, "0")
-                        return `${year}-${month}-${day} ${hour}:${minute}`;
-                    },  
-                    
-                    showSessionAttendees(id) {
-                        window.location.href=`./session.html?${id}`     
-                    },
-
-                    init() {
-                        this.attendee.id = window.location.search.substring(1)
-                        this.fetchData()
-                    }   
+                    newAttendeeSession: {}
                 }
+            },
+            async mounted() {
+                this.attendee.id = window.location.search.substring(1)
+
+                const attendeeData = await fetch(`/attendees/${this.attendee.id}`);
+                const attendeeSessionsData = await fetch(`/attendees/${this.attendee.id}/sessions`);
+                const sessionsData = await fetch('/sessions?venue=name&presentation=name');
+
+                const allSessions = await sessionsData.json();
+
+                this.attendeeSessions = await attendeeSessionsData.json();
+
+                const sessionSet = new Set(this.attendeeSessions.map(it => it.id));
+
+                this.sessions = allSessions.filter(session => !sessionSet.has(session.id));
+
+                this.attendee = await attendeeData.json();
+            },
+            methods: {
+                async createAttendeeSession() {
+                    if (this.newAttendeeSession.id) {
+                        const res = await fetch(`/attendees/${this.attendee.id}/sessions/${this.newAttendeeSession.id}`, {
+                            method: 'PUT',
+                        });
+
+                        document.location.reload()
+                    }
+                },
+
+                async deleteAttendeeSession(id) {
+                    await fetch(`/attendees/${this.attendee.id}/sessions/${id}`, { method: 'DELETE' });
+                    document.location.reload()
+                },
+
+                fromEpochMinute(epoch) {
+                    const date = new Date()
+                    date.setTime((epoch + date.getTimezoneOffset()) * 60000) // JS Date wants ms
+                    const year = date.getFullYear()
+                    const month = String(date.getMonth() + 1).padStart(2, "0")
+                    const day = String(date.getDate()).padStart(2, "0")
+                    const hour = String(date.getHours()).padStart(2, "0")
+                    const minute = String(date.getMinutes()).padStart(2, "0")
+                    return `${year}-${month}-${day} ${hour}:${minute}`;
+                },
+
+                showSessionAttendees(id) {
+                    window.location.href = `./session.html?${id}`
+                },
             }
-        </script>
-    </head>
-    <body>
-        <div x-data="attendee()">
-            <h2 x-text="attendee.name"></h2>
-            <table width="80%">
-                <tr>
-                    <th width="40%">Presentation</th>
-                    <th width="20%">Venue</th>
-                    <th width="15%">Start Date/Time</th>
-                    <th width="3%">Duration Minutes</th>
-                </tr>
-                <template x-for="attendeeSession in attendeeSessions" :key="attendeeSession.id">
-                    <tr>
-                        <td><input type="text" x-model="attendeeSession.presentation.name" readonly></td>
-                        <td><input type="text" x-model="attendeeSession.venue.name" readonly></td> 
-                        <td><input type="text" :value="fromEpochMinute(attendeeSession.start_time_min)" readonly></td> 
-                        <td><input type="text" x-model="attendeeSession.duration_mins" readonly></td>      
-                        <td><button @click="deleteAttendeeSession(attendeeSession.id)">Delete</button></td>
-                        <td><button @click="showSessionAttendees(attendeeSession.id)">Session</button></td>   
-                    </tr>
-                </template>
-                <tr>
-                    <td colspan="4">
-                      <select x-ref="sessionSelect" x-model.number="newAttendeeSession.id" @change="selectedSessionId = $refs.sessionSelect.options[$refs.sessionSelect.selectedIndex].value">
-                        <option value="0"></option>
-                        <template x-for="session in sessions" :key="session.id">
-                          <option :value="session.id" x-text="session.presentation.name + ' - ' + session.venue.name + ' - ' + fromEpochMinute(session.start_time_min) + ' - ' + session.duration_mins"></option>
-                        </template>
-                      </select>
-                    </td>
-                    <td><button @click="createAttendeeSession()">Add</button></td>
-                </tr>    
-            </table>
-        </div>
-    </body>
+        }).mount("#app")
+    </script>
+</body>
+
 </html>
