--- a/yascon-rest/static/index.html
+++ b/yascon-rest/static/index.html
@@ -6,11 +6,11 @@
     <body class="flex-top">
     <table width="100%">
         <tr>
-            <td><a href="./speakers.html" target="iframe">Speakers</a></td>
-            <td><a href="./presentations.html" target="iframe">Presentations</a></td>
-            <td><a href="./venues.html" target="iframe">Venues</a></td>
-            <td><a href="./sessions.html" target="iframe">Sessions</a></td>
-            <td><a href="./attendees.html" target="iframe">Attendees</a></td>
+            <th><a href="./speakers.html" target="iframe">Speakers</a></th>
+            <th><a href="./presentations.html" target="iframe">Presentations</a></th>
+            <th><a href="./venues.html" target="iframe">Venues</a></th>
+            <th><a href="./sessions.html" target="iframe">Sessions</a></th>
+            <th><a href="./attendees.html" target="iframe">Attendees</a></th>
         </tr>
     </table>
     <iframe name="iframe" class="iframe-flex" style="width: 100%; height: 80%;"></iframe>
